tests/cases/should_fail/types/incomplete_tuple_literal_type_annotation.stderr
error: expected a type annotation
 --> $DIR/incomplete_tuple_literal_type_annotation.hash:1:32
1 |   k : (str, bar: u8) -> u32 = (k: );
  |                                  ^ here
